Fix #4714: Alignment of button and text in exploration setting  (#4811)
* Fixes #4714

* Changed button and removed indicative text

* Added protractor-test-enable-parameter class

* Fixed toggle buttons

* Fixed CSS names

* Removed extra protractor-test-enable-parameter class

* Moved protractor-test-enable-parameters

* Fixed parameters error

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1,12 +1,9 @@
 /*
   Copyright 2014 The Oppia Authors. All Rights Reserved.
-
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-
       http://www.apache.org/licenses/LICENSE-2.0
-
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -1192,7 +1189,6 @@ textarea {
 }
 /*
   This is needed for proper display of tabs. See
-
   https://github.com/angular-ui/bootstrap/commit/8620aedba99b05822311
 */
 .navbar-nav, .uib-pagination {
@@ -4874,6 +4870,72 @@ md-card.preview-conversation-skin-supplemental-card {
 .btn.oppia-donate-options-button:focus {
   background-color: rgba(5, 190, 178, 1);
   color: rgba(255,255,255,1);
+}
+
+.oppia-on-off-switch {
+  position: relative;
+  width: 70px;
+}
+.oppia-on-off-switch-checkbox {
+  display: none;
+}
+.oppia-on-off-switch-label {
+  border: 2px solid #999999;
+  border-radius: 20px;
+  cursor: pointer;
+  display: block;
+  overflow: hidden;
+}
+.oppia-on-off-switch-inner {
+  display: block;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+  width: 200%;
+}
+.oppia-on-off-switch-inner:before, .oppia-on-off-switch-inner:after {
+  box-sizing: border-box;
+  color: white;
+  display: block;
+  font-family: "Capriola", "Roboto", Arial, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  float: left;
+  height: 20px;
+  line-height: 20px;
+  padding: 0;
+  width: 50%;
+}
+.oppia-on-off-switch-inner:before {
+  background-color: #04857C;
+  color: #FFFFFF;
+  content: "ON";
+  padding-left: 10px;
+}
+.oppia-on-off-switch-inner:after {
+  background-color: #EEEEEE;
+  color: #999999;
+  content: "OFF";
+  padding-right: 10px;
+  text-align: right;
+}
+.oppia-on-off-switch-main {
+  background: #FFFFFF;
+  border: 2px solid #999999;
+  border-radius: 20px;
+  bottom: 0;
+  display: block;
+  margin: 3.5px;
+  position: absolute;
+  right: 41px;
+  top: 0;
+  transition: all 0.3s ease-in 0s;
+  width: 18px;
+}
+.oppia-on-off-switch-checkbox:checked + .oppia-on-off-switch-label .oppia-on-off-switch-inner {
+  margin-left: 0;
+}
+.oppia-on-off-switch-checkbox:checked + .oppia-on-off-switch-label .oppia-on-off-switch-main {
+  right: 0;
 }
 
 /*
